--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,18 @@
-FROM ubuntu:16.04 
+FROM nvidia/cuda:9.0-devel-ubuntu16.04
+
+
+ENV CUDNN_VERSION 7.3.0.29
+LABEL com.nvidia.cudnn.version="${CUDNN_VERSION}"
+
+
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+	    apt-utils \
+            libcudnn7=$CUDNN_VERSION-1+cuda9.0 \
+            libcudnn7-dev=$CUDNN_VERSION-1+cuda9.0 && \
+    apt-mark hold libcudnn7 && \
+    rm -rf /var/lib/apt/lists/*
+
 
 # install requirements
 RUN apt-get update \
